# ailurus-backend

./: .dockerignore  .env.example  .env.new  .env.tests  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  gunicorn.conf.py  manage.py  openapi.json  pyproject.toml  sample_server.Dockerfile  startup.sh  test.py  wsgi.py
ailurus/: __init__.py
ailurus/models/: __init__.py
ailurus/routes/: __init__.py
ailurus/schema/: __init__.py
ailurus/svcmodes/: migrations.py
ailurus/utils/: checker.py  config.py  contest.py  cors.py  exception.py  file.py  score.py  scoremode.py  security.py  socket.py  svcmode.py
ailurus/worker/: __init__.py  checker.py  flagrotator.py  keeper.py  svcmanager.py  worker.py
and_platform/: __init__.py  app.py  main.py  settings.py
and_platform/api/: __init__.py  auth.py
and_platform/auth/: models.py  routes.py
and_platform/cache/: __init__.py
and_platform/checker/: __init__.py  tasks.py  utils.py
and_platform/contest/: routes.py
and_platform/core/: challenge.py  config.py  constant.py  contest.py  flag.py  score.py  security.py  service.py  ssh.py  submit.py
and_platform/flag/: models.py
and_platform/logging/: __init__.py
and_platform/models/: __init__.py
and_platform/routes/: auth.py  flag.py  services.py
and_platform/schedule/: __init__.py
and_platform/socket/: __init__.py
ansible/: .gitignore  README.md  ansible.cfg  inventory-example
ansible/config-example/: ailurus.yml  scoreboard.yml  wireguard.yml
ansible/playbooks/: backend-run.yml  backend-setup.yml  backend-terminate.yml  checker-provision.yml  frontend-run.yml  frontend-setup.yml  frontend-terminate.yml  provision.yml  scoreboard-setup.yml  service-server-clear.yml  service-server-docker-prune.yml  vpn-run.yml  vpn-setup.yml  vpn-terminate.yml  vpn-useradd.yml  worker-run.yml  worker-setup.yml  worker-terminate.yml
checker/: main.py
migrations/: env.py
migrations/versions/: 198a881141f4_add_checkeragentreport_and_checker_.py  1f72fddcddc8_update_to_testcase_artifact_in_.py  27f278c8e0a0_remove_unique_server_id_from_challenges.py  3dcaba762be0_add_round_and_tick_on_checker.py  434fe8065050_add_chall_id_to_constraint.py  43b8cf2185bc_change_credential_colname_to_detail_in_.py  43e72e6a5fae_nullable_in_flag_and_chall_for_wrong_.py  4b7374c4f9c9_seed_application_default_configuration.py  621240ce0d3f_add_secret_column_in_service.py  9c7d23c7145d_.py  9f9f857df3fb_support_multi_flag_and_add_artifact_sum.py  b0490d22bb40_initial_migration.py  b2591bc6e942_enrich_submission_table_and_add_indexing.py  b265af5c2d6c_update_time_created_default_value.py  b4bda61d486f_seed_checker_before_contest_config.py  b4bda61d486f_seed_defense_phase_config.py  b90c23888c3f_multi_flag_support.py  (+5 more)
tests/: conftest.py
(+252 files in other folders)
