[tool.poetry]
name = "and-platform"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "and_platform"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
Flask-SQLAlchemy = "^3.0.5"
fabric = "^3.1.0"
flask-migrate = "^4.0.4"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.7"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
