[tool.poetry]
name = "and-platform"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "and_platform"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
Flask-SQLAlchemy = "^3.0.5"
fabric = "^3.1.0"
flask-migrate = "^4.0.4"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.7"
pyjwt = "^2.8.0"
paramiko = "^3.3.1"
flask-jwt-extended = "^4.5.2"
pyyaml = "^6.0.1"
celery = "^5.3.1"
redis = "^5.0.0"
fulgens = {git = "https://github.com/CTF-Compfest-15/fulgens.git", rev = "v0.2.1"}
requests = "^2.31.0"
pytz = "^2023.3"
flask-cors = "^4.0.0"
eventlet = "^0.33.3"
billiard = "^4.1.0"
argparse = "^1.4.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
types-pyyaml = "^6.0.12.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
